// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarsCheckbox render checked 1`] = `
<TouchableWithoutFeedback
  onPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingTop": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 3,
          "height": 26,
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#0097a9",
            "fontSize": 16,
          }
        }
      >
        <Stars
          rating={5}
        />
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Icon
        color="#0097a9"
        name="check"
        size={26}
      />
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`StarsCheckbox render text instead of stars 1`] = `
<TouchableWithoutFeedback
  onPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingTop": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 3,
          "height": 26,
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "300",
            "marginLeft": 3,
          }
        }
      >
        Some text
      </Text>
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`StarsCheckbox render unchecked with 1 star 1`] = `
<TouchableWithoutFeedback
  onPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingTop": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 3,
          "height": 26,
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#0097a9",
            "fontSize": 16,
          }
        }
      >
        <Stars
          rating={1}
        />
      </Text>
    </View>
  </View>
</TouchableWithoutFeedback>
`;

exports[`StarsCheckbox render unchecked with 3 stars 1`] = `
<TouchableWithoutFeedback
  onPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingTop": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 3,
          "height": 26,
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#0097a9",
            "fontSize": 16,
          }
        }
      >
        <Stars
          rating={3}
        />
      </Text>
    </View>
  </View>
</TouchableWithoutFeedback>
`;
